fix: remove redunant PKBuilder interface and reorganize UrlBuilder class